--- a/src/index.less
+++ b/src/index.less
@@ -75,6 +75,16 @@ code {
     }
 };
 
-.card-info {
+.card-info-table {
   margin-top: 50px;
+  .ant-card-body {
+    padding: 0px;
+  }
+}
+
+.card-info-list {
+  margin-top: 50px;
+  .ant-card-body {
+    padding: 10px;
+  }
 }
